# stack

./: .gitmodules  CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/src/: demo.cpp
include/: Stack.hpp  Stack.tpp  global.hpp
linkedlist/: CMakeLists.txt
linkedlist/include/: LinkedList.h  LinkedList.hpp  LinkedList.tpp
linkedlist/include/linkedlist/: LinkedList.hpp  LinkedList.tpp  Node.hpp
linkedlist/src/: main.cpp
tools/: CMakeLists.txt
tools/include/tools/: Logger.hpp
